--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <input type="text" name="firstName" class="first-name"/>
         <input type="submit" value = "Click here"/>
     </form>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
-    <h2></h2>
+   <div class="gallery">
+    <div class="card">
+        <h2 class="card-header"></h2>
+    </div>
+   </div>
     <script src="index.js"></script>
 </body>
 </html>
