--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </form>
    <div class="gallery">
     <div class="card">
-        <h2 class="card-header"></h2>
+        <h2 class="card-header" id="column"> Books</h2>
         <h2></h2>
     </div>
    </div>
