--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <form action="" id ="form">
-        <label for="cardname">Card Name</label>
+        <label for="cardname">Book Title</label>
         <input type="text" id="input2"/>
-        <label for="cardinfo">Card Info</label>
+        <label for="cardinfo">Book Author</label>
         <input type="text" id="input"/>
         <button type="submit" id="btn">Click here</button>
     </form>
