--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <body>
     <form action="" id ="form">
         <label for="cardname">Book Title</label>
-        <input type="text" id="input2"/>
-        <label for="cardinfo">Book Author</label>
         <input type="text" id="input"/>
+        <label for="cardinfo">Book Author</label>
+        <input type="text" id="input2"/>
+        <label for="image">Book Image</label>
+        <input type="text" id="input3"/>
         <button type="submit" id="btn">Click here</button>
     </form>
+    
     <script src="index.js"></script>
 </body>
 </html>
