just remove left

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="text" id="input"/>
         <label for="cardinfo">Book Author</label>
         <input type="text" id="input2"/>
-        <label for="image">Book Image</label>
+        <label for="image">Book Cover</label>
         <input type="text" id="input3"/>
         <button type="submit" id="btn">Click here</button>
     </form>
